removed a bunch of issues based on static code review (no behavior changes)
git-svn-id: https://svn.code.sf.net/p/jvlt/code/trunk@464 2e8f9017-362f-4c5f-8fba-3cd18fd43268